# ntfs-auditor

./: README.md  index.html  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
