[package]
name = "ntfs-auditor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ntfs_auditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rust_xlsxwriter = "0.77"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemServices"
] }
tauri-plugin-dialog = "2.7.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
winres = "0.1"
